# D-Bus_Example

./: CMakeLists.txt  Readme.md  basics.gdbus.xml  basics_client.c  basics_server.c  config.h.in
